# aipatch

./: README.md  pyproject.toml
src/aipatch/: main.py  prelude.py
